[package]
name = "field-line-sim"
version = "0.1.0"
authors = ["Allen Mikhailov <mikhailovallen@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/Allen-Mikhailov/field-line-sim"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"