[package]
name = "field-line-sim"
version = "0.1.0"
authors = ["Allen Mikhailov <mikhailovallen@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/Allen-Mikhailov/field-line-sim"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.59"